# content-automation

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2d8d42ce9fad_create_core_tables.py  4f7d2c10c8a8_expand_post_platform_log_statuses_for_posting.py  5b4f87dd0b9c_add_connected_accounts_and_oauth_state.py
app/: __init__.py  accounts_service.py  compose_service.py  config.py  history_service.py  image_normalization.py  main.py  media_uploads.py  oauth_clients.py  platform_selection_service.py  posting_service.py  presentation.py  preview_service.py
app/db/: __init__.py  base.py  migrations.py  models.py  session.py
app/static/: styles.css
app/templates/: base.html
app/web/: __init__.py  router.py  routes.py  templates.py
context/: architecture.md  backend.md  changelog.md  database.md  frontend.md  implementation.md  index.md  media_pipeline.md  platform_registry.md  posting_workflow.md  product_overview.md  repo_structure.md  roadmap.md
context/decisions/: 001_local_first_architecture.md  002_fastapi_jinja_choice.md  (+7 more)
scripts/: generate_localhost_https_cert.sh
tests/: __init__.py  conftest.py  helpers.py  test_accounts_flow.py  test_compose_flow.py  test_config.py  test_db.py  test_facebook_adapter.py  test_history_flow.py  test_history_service.py  test_image_normalization.py  test_pages.py  test_platform_registry.py  test_platform_selection_flow.py  test_preview_flow.py  test_preview_service.py  test_shareability.py  test_smoke.py  test_submission_flow.py  test_x_adapter.py
(+22 files in other folders)
